--- a/src/jwt_issuer_poc_backend/Cargo.toml
+++ b/src/jwt_issuer_poc_backend/Cargo.toml
@@ -16,7 +16,10 @@ hex = "0.3.1"
 hmac = "0.12.1"
 ic-cdk = "0.5.2"
 ic-cdk-macros = "0.5.2"
+ic-certified-map = "0.3.0"
 k256 = { version = "0.11.4", features = ["ecdsa", "jwk"], default-features = false }
 serde = "1"
+serde_bytes = "0.11"
+serde_cbor = "0.11.2"
 serde_json = "1.0.85"
 sha2 = "0.10.5"
